Version 2.03.35 - 
==================

Version 2.03.34 - 30th July 2025
================================
  Support dmeventd restart when there are no monitored devices.
  Dmeventd no longer calls 'action commands' on removed devices.
  Fix reader of VDO metadata on 32bit architecture.
  Fix lvmdevices --deldev/--delpvid to error out if devices file not writeable.
  Fix lvresize corruption in LV->crypt->FS stack if near crypt min size limit.
  Enhanced lvresize -r support for btrfs.
  Use glibc standard functions htoX, Xtoh functions for endian conversion.
  Fix structure copying within sanlock's release_rename().
  Fix autoactivation on top of loop dev PVs to trigger once for change uevents.
  Add lvmlockd --lockopt repair to reinitialize corrupted sanlock leases.
  Fix support for lvcreate -T --setautoactivation.
  Add lvm.conf global/lvresize_fs_helper_executable.
  Enable lvm to use persistent reservations on a VG.

Version 2.03.33 - 27th June 2025
================================
  Various spelling, grammar, formatting, test, and build script improvements.
  Override LC_NUMERIC locale if unsuitable for json_std report format.
  Repair raid arrays with transiently lost devices.

Version 2.03.32 - 05th May 2025
===============================
  Lvconvert vdopool conversion properly validates acceptable LVs.
  Accept thin pool data LV as cacheable LV.
  Allow using zram block devices (likely for testing).
  Fix lvresize when resizing COW snapshots already covering origin.
  Fix lvmdbusd read of executed lvm commands output.
  Fix construction of DM UUID for cachevol _cdata and _cmeta devices.
  Ignore PV claims from old metadata when then PV belongs to a new VG.
  Fix integrity metadata rounding.
  Accept --autobackup option in pvresize.

Version 2.03.31 - 27th February 2025
====================================
  Reduce 'mandoc -T lint' reported issues for man pages.
  Restore support for LVM_SUPPRESS_FD_WARNINGS (2.03.24).